# groovy-cli

./: ARCHITECTURE.md  Cargo.toml  README.md  ralph.sh
.tickets/: gc-6x2b.md  gc-8j9n.md  gc-bflf.md  gc-c2l9.md  gc-cbne.md  gc-ecqu.md  gc-hopt.md  gc-jiqo.md  gc-njvx.md  gc-q73b.md  gc-tcm7.md
src/: auth.rs  config.rs  connection.rs  ffmpeg.rs  groovy.rs  main.rs  mock_server.rs  plex.rs  streamer.rs  test_pattern.rs
