[package]
name = "groovy-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
lz4_flex = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
toml = "0.8"
dirs = "6"
tempfile = "3"
anyhow = "1"
ctrlc = "3"
socket2 = "0.6.3"
spin_sleep = "1.3.3"
